--- a/facial recognition.html
+++ b/facial recognition.html
@@ -9,6 +9,8 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
   <script src="https://docs.opencv.org/4.5.4/opencv.js"></script>
   <script src="faceDetection.js"></script>
 </head>
@@ -22,22 +24,20 @@
     <!-- buttons -->
     <div class = "horizontal-container">
       <!-- Enable/Disable Webcam Buttons -->
-      <button id="requestButton">Enable Webcam</button>
-      <button id="disableButton">Disable Webcam</button>
+      <button id="requestButton" onclick="startWebcam()">Enable Webcam</button>
+      <button id="disableButton" onclick="stopWebcam()">Disable Webcam</button>
       <!-- Start/Stop Buttons -->
-      <button id="startButton">Start</button>
-      <button id="stopButton">Stop</button>
+      <button id="startButton" onclick="startMusicSelection()">Start</button>
+      <button id="stopButton" onclick="stopMusicSelection()">Stop</button>
     </div>
 
     <!-- Playback and labels -->
     <div class ="horizontal-container">
       <!-- Video playback -->
-      <video autoplay="true" id="videoElement"></video>
+      <div id="webcam-placeholder"></div>
+      <div id="webcam-container"></div>
       <!-- Labels -->
-      <div class = "vertical-container" id="label-container">
-        <div id="label">No face detected</div>
-        <div id="emotion">Emotion: </div>
-      </div>
+      <div class = "vertical-container" id="label-container"></div>
     </div>
   </div>
 
