Different version with toggleable buttons

--- a/facial recognition.html
+++ b/facial recognition.html
@@ -24,11 +24,9 @@
     <!-- buttons -->
     <div class = "horizontal-container">
       <!-- Enable/Disable Webcam Buttons -->
-      <button id="requestButton" onclick="startWebcam()">Enable Webcam</button>
-      <button id="disableButton" onclick="stopWebcam()">Disable Webcam</button>
+      <button id="toggleCam" onclick="toggleWebcam()">Enable Webcam</button>
       <!-- Start/Stop Buttons -->
-      <button id="startButton" onclick="startMusicSelection()">Start</button>
-      <button id="stopButton" onclick="stopMusicSelection()">Stop</button>
+      <button id="toggleMusicSelection" onclick="toggleMusicSelection()">Start</button>
     </div>
 
     <div>
