--- a/facial recognition.html
+++ b/facial recognition.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Face Detection and emotion classification using OpenCV and a custom trained model">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="icon.png">
   <title>Emotion classification using CV</title>
 
   <link rel="stylesheet" href="style.css">
