--- a/facial recognition.html
+++ b/facial recognition.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Workbench&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Workbench&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
@@ -39,7 +40,7 @@
   <!-- Playback and buttons -->
   <div class="vertical-container">
     <!-- buttons -->
-    <div class = "horizontal-container">
+    <div id = "buttons">
       <!-- Enable/Disable Webcam Buttons -->
       <button id="toggleCam" onclick="toggleWebcam()">Enable Webcam</button>
       <!-- Start/Stop Buttons -->
